--- a/style.css
+++ b/style.css
@@ -4,3 +4,14 @@ button{
     background-color: black;
     color: aqua;
 }
+ul{
+    width: 100px;
+    background-color: antiquewhite;
+
+}
+li{
+    width: 150px;
+    height: 50px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: black;
+}
