--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fuggles&family=Noto+Sans+Old+Hungarian&family=Pixelify+Sans&display=swap');
 button{
     width: 150;
     height: 100;
@@ -12,6 +13,15 @@ ul{
 li{
     width: 150px;
     height: 50px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
     color: black;
+}
+text{
+    font-size: 30px;
+    line-height: 35px;
+}
+body{
+    font-family: 'Pixelify Sans', cursive;
+    font-size: 19px;
+
+
 }
